// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard Debe mostrar el componente correctament con el titulo  1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product card
  </h1>
</div>
`;

exports[`ProductCard Debe mostrar el componente correctament con el titulo  2`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product card
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  />
</div>
`;
